fix(task meta): correct too wide clickable groups link
Related to: CAM-3128

--- a/webapps/client/scripts/task/directives/cam-tasklist-task-meta.less
+++ b/webapps/client/scripts/task/directives/cam-tasklist-task-meta.less
@@ -41,8 +41,9 @@
   }
 
   .groups {
-    > div {
-      padding-top: 3px;
+    > span {
+      position: relative;
+      top: 2px;
 
       > .glyphicon,
       > a {
